--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-linkedin-login-oauth2": "^1.0.8",
     "react-scripts": "4.0.1",
     "react-social-login": "^3.4.10",
     "web-vitals": "^0.2.4"
